[package]
name = "colors-by-example"
version = "0.1.13"
authors = ["YEUNG King On <koyeung@gmail.com>"]
categories = [
  "graphics",
]
edition = "2021"
keywords = [
  "color",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/koyeung/colors-by-example/"
rust-version = "1.74"
description = "Pick ansi-256 colors by examples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
approx = "0.5.1"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
owo-colors = "4.0.0"
palette = "0.7.3"

[lints.clippy]
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-lints-section
# https://doc.rust-lang.org/stable/clippy/index.html
cargo = "warn"
