[package]
name = "colors-by-example"
version = "0.1.76"
categories = [
  "graphics",
]
edition = "2024"
keywords = [
  "color",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/koyeung/colors-by-example/"
rust-version = "1.87"
description = "Pick ansi-256 colors by examples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-machete]
ignored = ["approx"]  # used in cargo doc

[dependencies]
anyhow = "1.0.102"
approx = "0.5.1"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
owo-colors = "4.3.0"
palette = { version = "0.7.3", default-features = false, features = [
  "std",
  "serializing",
] }

[lints.clippy]
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-lints-section
# https://doc.rust-lang.org/stable/clippy/index.html

cargo = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
